Add disposing and updating of asset activity

--- a/HOAmanager/src/main/resources/templates/assetActions.html
+++ b/HOAmanager/src/main/resources/templates/assetActions.html
@@ -125,7 +125,7 @@
                                             locLongitude: document.getElementById('updateLong').value,
                                             hoaName: document.getElementById('updateHOA').value
                                         };
-                                        fetch('/updateAsset', {
+                                        fetch('/updateAssetActivity', {
                                             method: 'POST',
                                             headers: {
                                                 'Content-Type': 'application/json'
