--- a/HOAmanager/src/main/resources/templates/deleteDisposeRow.html
+++ b/HOAmanager/src/main/resources/templates/deleteDisposeRow.html
@@ -33,3 +33,27 @@
     </div>
     </div>
 </div>
+
+<div class="modal fade" id="disposeAssetActivity" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5" id="staticBackdropLabel">Dispose Asset?</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <h5>Are you sure about this? Disposed Assets cannot be modified</h5>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="presidentApproval">
+                    <label class="form-check-label" for="presidentApproval" id="approvalLabel">
+                    </label>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-success btn-lg" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-outline-danger btn-lg">Confirm</button>
+            </div>
+        </div>
+    </div>
+</div>
+
